feat(issue-refactoring): sonar findings